--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,9 +51,12 @@ p {
 }
 
 .hero {
-    height: 800px;
+    height: 100px;
     width: 100%;
     margin-bottom: 25px;
+    margin-top: 25px;
+    margin-left: 25px;
+    margin-right: 25px;
     background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
